fix: Visibility hidden

--- a/src/assets/components/Xmodal.css
+++ b/src/assets/components/Xmodal.css
@@ -1,6 +1,3 @@
-.container {
-  height: 100vh;
-}
 .header {
   display: flex;
   align-items: center;
@@ -14,7 +11,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
-  visibility: hidden;
   transform: scale(1.1);
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
@@ -31,7 +27,6 @@
 
 .show-modal {
   opacity: 1;
-  visibility: visible;
   transform: scale(1);
   transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
